Fixing the breadcrumbs' separator whitespace between items.

--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -18,15 +18,16 @@
 
     + li:before {
       content: "@{breadcrumb-separator}\00a0"; // Unicode space added since inline-block means non-collapsing white-space
-      padding: 0 2.5px 0 7.5px;
+      padding-left: 6px;
       color: @breadcrumb-color;
     }
 
-    .active {
+    .active, &.active {
      color: @breadcrumb-active-color;
      font-weight: 600;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
+     cursor: default;
     }
 
   }
